less/default.less
.react-tel-input {
    display: flex;
    width: 250px;
    align-items: center;
    @import 'countries.less';
    * {
        box-sizing: border-box;
        -moz-box-sizing: border-box;
    }
    .hide {
        display: none;
    }
    .v-hide {
        visibility: hidden;
    }
    input[type=text],
    input[type=tel] {
        width: 100%;
        &:focus {
            border-color: #42bdff;
            border-left-color: #cacaca;
        }
        &.invalid-number {
            border: 1px solid #d79f9f;
            background-color: #FAF0F0;
            border-left-color: #cacaca;
            &:focus {
                border: 1px solid #d79f9f;
                border-left-color: #cacaca;
                background-color: #FAF0F0;
            }
        }
    }
    .flag-dropdown {
        padding: 0;
        &.open-dropdown {
            background: #fff;
            border-bottom: 0;
            border-radius: 3px 0 0 0;
            .selected-flag {
                background: #fff;
                border-radius: 3px 0 0 0;
            }
        }
        &:hover {
            cursor: pointer;
            .selected-flag {
                background-color: #fff;
            }
        }
    }
    input[disabled] {
        &+.flag-dropdown {
            &:hover {
                cursor: default;
                .selected-flag {
                    background-color: transparent;
                }
            }
        }
    }
    .selected-flag {
        width: 38px;
        height: 26px;
        padding: 0 0 0 8px;
        border-radius: 3px 0 0 3px;
        .flag {
            margin-top: -5px;
            display: inline-block;
        }
        .arrow {
            width: 0;
            height: 0;
            display: inline-block;
            border-left: 3px solid transparent;
            border-right: 3px solid transparent;
            border-top: 4px solid #555;
            &.up {
                border-top: none;
                border-bottom: 4px solid #555;
            }
        }
    }
    .country-list {
        list-style: none;
        z-index: 15;
        padding: 0;
        margin: -1px 0 0 -1px;
        background-color: white;
        border: 1px solid #ccc;
        width: 400px;
        max-height: 200px;
        overflow-y: scroll;
        border-radius: 0 0 3px 3px;
        top: 26px;
        .country {
            padding: 5px 10px;
            .dial-code {
                color: #999;
            }
            &:hover {
                background-color: #e8f7fe;
            }
            &.highlight {
                background-color: #c7e2f1;
            }
        }
        .flag {
            margin-right: 6px;
            margin-top: 2px;
            display: inline-block;
        }
        .country-name {
            margin-right: 6px;
        }
    }
}

